moving folder, adding statics files

--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -4,8 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Flota - Terra Ingenieria</title>
-	<link rel="stylesheet" type="text/css" href="../TI-CSS/ti_vista-flota.css">
-	<link rel="stylesheet" type="text/css" href="../TI-CSS/normalize.css">
+	{% load static %}
+	<link rel="stylesheet" type="text/css" href={% static 'css/ti_vista-flota.css' %}>
+	<link rel="stylesheet" type="text/css" href={% static 'css/normalize.css' %}>
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
