--- a/backServer/vistas/html/ti_ingreso.html
+++ b/backServer/vistas/html/ti_ingreso.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,7 +8,9 @@
 	{% load static %}
 	<link rel="stylesheet" type="text/css" href={% static 'css/ti_ingreso.css' %}>
 	<link rel="stylesheet" type="text/css" href={% static 'css/normalize.css' %}>
+	<link rel="icon" href={% static 'logo.ico' %}>
 </head>
+
 <body>
 	<div class="flex-container">
 		<div class="form-img">
@@ -31,4 +34,5 @@
 	</div>
 
 </body>
+
 </html>
