cambios html y css

--- a/backServer/vistas/html/ti_ingreso.html
+++ b/backServer/vistas/html/ti_ingreso.html
@@ -5,6 +5,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Terra Ingenieria</title>
+	<!--<link rel="stylesheet" type="text/css" href="../css/ti_ingreso.css">
+	<link rel="stylesheet" type="text/css" href="../css/normalize.css">
+	<link rel="icon" href="../logo.ico">-->
 	{% load static %}
 	<link rel="stylesheet" type="text/css" href={% static 'css/ti_ingreso.css' %}?{% now "U" %}>
 	<link rel="stylesheet" type="text/css" href={% static 'css/normalize.css' %}?{% now "U" %}>
@@ -16,6 +19,7 @@
 		<div class="form-img">
 			<div class="img-container">
 				<div>
+					<!--<img src="../logo.jpg">-->
 					<img src={% static 'logo.jpg' %}>
 				</div>
 			</div>
