--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -21,7 +21,7 @@
 			<div class="nav-desktop right">
 				<a href="#">Inicio</a>
 				<a href="#">Flota</a>
-				<a href="/logout">Cerrar sesión</a> <!--No se como carajo deslogear :) -->
+				<a href="/logout">Cerrar sesión</a>
 			</div>
 		</div>
 	</nav>
