--- a/backServer/vistas/html/base.html
+++ b/backServer/vistas/html/base.html
@@ -9,6 +9,7 @@
 
     <div class="container">
         {% for message in messages %}
+        <script src="{% static 'alert.js' %}"></script>
         <p id="messages">{{message}}</p>
         {% endfor %}
     
