--- a/backServer/vistas/html/ti_ingreso.html
+++ b/backServer/vistas/html/ti_ingreso.html
@@ -24,13 +24,13 @@
 			{% csrf_token %}
 			<div class="form__section">
 				<input id="name" name="username" type="email name" required class="form__input" placeholder=" ">
-				<label for="name" class="form__label">Usuario1:</label>
+				<label for="name" class="form__label">Usuario</label>
 			</div>
 			<div class="form__section">
-				<input name="password" type="password" required class="form__input" placeholder="Contraseña:">
+				<input name="password" type="password" required class="form__input" placeholder="Contraseña">
 			</div>
 			<div class="form__section">
-				<input type="submit" value="Ingresar" class="form__input">
+				<input type="submit" value="Ingresar" class="form__input--active">
 			</div>
 		</form>
 	</div>
