add changes in model

--- a/backServer/vistas/html/add_flote.html
+++ b/backServer/vistas/html/add_flote.html
@@ -3,13 +3,18 @@
 {% block content %}  
     <form method="post" enctype="multipart/form-data">  
         {% csrf_token %}  
-        {{ form.as_p }}  
+        {% for hidden in form.hidden_fields %}  
+            {{hidden}}
+        {% endfor %}
+        {% for field in form %}
+            {{field.name}}
+            {{field}} <br />
+        {% endfor %}
+        {{ imageform.management_form}}
+        {% for form in imageform %}
+            {{ form }}
+        {% endfor %}
         <button type="submit">Upload</button>  
     </form>  
-  
-    {% if img_obj %}  
-        <h3>Succesfully uploaded : {{img_obj.caption}}</h3>  
-        <img src="{{ img_obj.image.url}}" alt="connect" style="max-height:300px">  
-    {% endif %}  
   
 {% endblock content %}
