--- a/backServer/vistas/html/add_flote.html
+++ b/backServer/vistas/html/add_flote.html
@@ -1,32 +1,48 @@
-{% extends 'base.html' %}  
+{% extends 'base.html' %}
 {% load static %}
-{% block content %} 
+{% block content %}
+
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Terra Ingenieria</title>
-	<link rel="stylesheet" type="text/css" href={% static 'css/ti_ingreso.css' %}?{% now "U" %}>
-	<link rel="stylesheet" type="text/css" href={% static 'css/normalize.css' %}?{% now "U" %}>
-	<link rel="icon" href={% static 'logo.ico' %}>
-	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Terra Ingenieria</title>
+    <link rel="stylesheet" type="text/css" href={% static 'css/add_flote.css' %}?{% now "U" %}>
+    <link rel="stylesheet" type="text/css" href={% static 'css/normalize.css' %}?{% now "U" %}>
+    <link rel="icon" href={% static 'logo.ico' %}>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 
-<form method="post" enctype="multipart/form-data">  
-    {% csrf_token %}  
-    {% for hidden in form.hidden_fields %}  
-        {{hidden}}
-    {% endfor %}
-    {% for field in form %}
-    <h2 class="form__input">
-        {{field.name}}
-        {{field}} <br />
-    </h2>
-    {% endfor %}
-    {{ imageform.management_form}}
-    {% for form in imageform %}
-        {{ form }}
-    {% endfor %}
-    <button type="submit">Upload</button>  
-</form>  
-  
+<body>
+    <div class="input-group mb-3 flex-container">
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {% for hidden in form.hidden_fields %}
+            {{hidden}}
+            {% endfor %}
+            {% for field in form %}
+            <span class="input-group-text" id="inputGroup-sizing-default">
+                {{field.name}}
+                {{field}}
+            </span>
+            {% endfor %}
+            <!--<div class="mb-3">
+                <label for="formFileMultiple" class="form-label"> 
+                    {{ imageform.management_form}}
+                    {% for form in imageform %}
+                    {{ form }}
+                    {% endfor %}
+                </label>
+                <input class="form-control" type="file" id="formFileMultiple" multiple>
+            </div>-->
+            {{ imageform.management_form}}
+            {% for form in imageform %}
+            {{ form }}
+            {% endfor %} <br>
+            <button type="submit">Upload</button>
+        </form>
+    </div>
+</body>
+
 {% endblock content %}
