--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -9,18 +9,24 @@
 	<link rel="stylesheet" type="text/css" href={% static 'css/ti_vista-flota.css' %}?{% now "U" %}>
 	<link rel="stylesheet" type="text/css" href={% static 'css/normalize.css' %}?{% now "U" %}>
 	<link rel="icon" href={% static 'logo.ico' %}>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 
 <body>
-	<nav class="nav">
-		<div class="nav-container">
-			<div class="nav-desktop left">
-				<h2>Terra</h2>
+	<nav class="nav-bar">
+		<div class="container-fluid">
+			<div class="nav-desktop logo">
+				<img src={% static 'logo-nav.png' %}>
 			</div>
 			<div class="nav-desktop right">
-				<!--<a href="#">Inicio</a>
-				<a href="#">Flota</a>-->
+				<button class="btn btn-outline-success me-2" type="button">
+					<a href="add">Agregar flota</a></button>
+				<form class="d-flex" role="search">
+					<input class="form-control me-2" type="search" placeholder="Buscador" aria-label="Buscador">
+					<button class="btn btn-outline-success" type="submit">Buscar</button>
+				</form>
 				<a href="/logout">Cerrar sesión</a>
 			</div>
 		</div>
@@ -43,7 +49,7 @@
 	</header>
 	<main>
 		<section class="conteiner-flotas">
-			<h2 class="titulo">Flotas</h2>
+			<h2 class="titulo">FLOTAS</h2>
 			<div class="conteiner-flotas-img">
 				<img src={% static 'ret01.png' %}>
 			</div>
