--- a/backServer/vistas/html/add_flote.html
+++ b/backServer/vistas/html/add_flote.html
@@ -6,15 +6,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Terra Ingenieria</title>
-    <link rel="stylesheet" type="text/css" href={% static 'css/add_flote.css' %}?{% now "U" %}>
     <link rel="stylesheet" type="text/css" href={% static 'css/normalize.css' %}?{% now "U" %}>
-    <link rel="icon" href={% static 'logo.ico' %}>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href={% static 'css/add_flote.css' %}?{% now "U" %}>
+	<link rel="icon" href={% static 'logo.ico' %}>
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300&display=swap"
+		rel="stylesheet">
 </head>
 
 <body>
+    <nav class="nav-bar">
+        <div class="container-fluid">
+            <div class="nav-desktop logo">
+                <img src={% static 'logo-nav.png' %}>
+            </div>
+            <div class="nav-desktop right">
+                <button class="btn btn-outline-success me-2" type="button">
+                    <a href="../flotes">VOLVER</a>
+                </button>
+            </div>
+        </div>
+    </nav>
     <div class="input-group mb-3 flex-container">
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
