--- a/backServer/vistas/html/add_flote.html
+++ b/backServer/vistas/html/add_flote.html
@@ -10,7 +10,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href={% static 'css/add_flote.css' %}?{% now "U" %}>
-	<link rel="icon" href={% static 'logo.ico' %}>
+	<link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300&display=swap"
 		rel="stylesheet">
 </head>
