--- a/backServer/vistas/html/base.html
+++ b/backServer/vistas/html/base.html
@@ -1,6 +1,9 @@
 {% load static %}
 
 <!DOCTYPE html>
+<head>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+</head>
 <html>
 
 <div class="container">
