--- a/backServer/vistas/html/base.html
+++ b/backServer/vistas/html/base.html
@@ -3,13 +3,24 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Terra Ingenieria</title>
+    <link rel="stylesheet" type="text/css" href={% static 'css/normalize.css' %}?{% now "U" %}>
+    <link rel="icon" href={% static 'favicon.ico' %}>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300&display=swap"
+        rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
+</head>
+
 <div class="container">
     {% for message in messages %}
     <script src="{% static 'alert.js' %}"></script>
     <p id="messages">{{message}}</p>
     {% endfor %}
-
-
 </div>
 
 {% block content %} {% endblock %}
