--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -3,19 +3,9 @@
 {% block content %}
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Terra Ingenieria</title>
-	<link rel="stylesheet" type="text/css" href={% static 'css/normalize.css' %}?{% now "U" %}>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href={% static 'css/ti_vista-flota.css' %}?{% now "U" %}>
-	<link rel="icon" href={% static 'logo.ico' %}>
-	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300&display=swap"
-		rel="stylesheet">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-		crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -38,7 +28,7 @@
 	</nav>
 
 	<header class="header">
-		<div class="wave" style="height: 150px; overflow: hidden;">
+		<div class="wave " style="height: 150px; overflow: hidden;">
 			<svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
 				<path d="M-9.87,55.77 C209.65,148.53 333.23,8.41 500.00,49.98 L500.00,150.00 L-3.10,152.47 Z"
 					style="stroke: none; fill: #47476b;">
@@ -54,118 +44,108 @@
 	</header>
 	<section class="flotes">
 		<div class="contenedor">
-			<h2 class="titulo">FLOTAS</h2>
+			<h2 class="titulo text-center fw-bold">FLOTAS</h2>
 			<div class="contenedor-flotes">
 				<div class="contenedor-flotes-img">
-					<img src={% static 'ret01.png' %}>
+					<img src={% static 'retro.png' %}>
 					<div class="hover-img dropdown">
 						<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
 							aria-expanded="false">
-							Maquinaria
+							Restroexcavadora
 						</button>
 						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="#">Maquinaria-1</a></li>
-							<li><a class="dropdown-item" href="#">Maquinaria-2</a></li>
-							<li><a class="dropdown-item" href="#">Maquinaria-3</a></li>
+							<li><a class="dropdown-item" href="#">RET01</a></li>
+							<li><a class="dropdown-item" href="#">RET02</a></li>
+							<li><a class="dropdown-item" href="#">RET03</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="contenedor-flotes-img">
-					<img src={% static 'cam01.png' %}>
+					<img src={% static 'cam.png' %}>
 					<div class="hover-img dropdown">
 						<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
 							aria-expanded="false">
-							Maquinaria
+							Camioneta
 						</button>
 						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="#">Maquinaria-1</a></li>
-							<li><a class="dropdown-item" href="#">Maquinaria-2</a></li>
-							<li><a class="dropdown-item" href="#">Maquinaria-3</a></li>
+							<li><a class="dropdown-item" href="#">CAM01</a></li>
+							<li><a class="dropdown-item" href="#">CAM02</a></li>
+							<li><a class="dropdown-item" href="#">CAM03</a></li>
+							<li><a class="dropdown-item" href="#">CAM04</a></li>
+							<li><a class="dropdown-item" href="#">CAM05</a></li>
+							<li><a class="dropdown-item" href="#">CAM06</a></li>
+							<li><a class="dropdown-item" href="#">CAM07</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="contenedor-flotes-img">
-					<img src={% static 'car01.png' %}>
+					<img src={% static 'carre.png' %}>
 					<div class="hover-img dropdown">
 						<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
 							aria-expanded="false">
-							Maquinaria
+							Carretones
 						</button>
 						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="#">Maquinaria-1</a></li>
-							<li><a class="dropdown-item" href="#">Maquinaria-2</a></li>
-							<li><a class="dropdown-item" href="#">Maquinaria-3</a></li>
+							<li><a class="dropdown-item" href="#">CAR01</a></li>
+							<li><a class="dropdown-item" href="#">CAR02</a></li>
+							<li><a class="dropdown-item" href="#">CAR03</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="contenedor-flotes-img">
-					<img src={% static 'car01.png' %}>
+					<img src={% static 'tanreg.png' %}>
 					<div class="hover-img dropdown">
 						<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
 							aria-expanded="false">
-							Maquinaria
+							Tanques regadores
 						</button>
 						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="#">Maquinaria-1</a></li>
-							<li><a class="dropdown-item" href="#">Maquinaria-2</a></li>
-							<li><a class="dropdown-item" href="#">Maquinaria-3</a></li>
+							<li><a class="dropdown-item" href="#">TAR01</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="contenedor-flotes-img">
-					<img src={% static 'car01.png' %}>
+					<img src={% static 'tac.png' %}>
 					<div class="hover-img dropdown">
 						<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
 							aria-expanded="false">
-							Maquinaria
+							Tanques de combustible
 						</button>
 						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="#">Maquinaria-1</a></li>
-							<li><a class="dropdown-item" href="#">Maquinaria-2</a></li>
-							<li><a class="dropdown-item" href="#">Maquinaria-3</a></li>
+							<li><a class="dropdown-item" href="#">TAC01</a></li>
+							<li><a class="dropdown-item" href="#">TAC02</a></li>
+							<li><a class="dropdown-item" href="#">TAC03</a></li>
+							<li><a class="dropdown-item" href="#">TAC04</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="contenedor-flotes-img">
-					<img src={% static 'car01.png' %}>
+					<img src={% static 'motn.png' %}>
 					<div class="hover-img dropdown">
 						<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
 							aria-expanded="false">
-							Maquinaria
+							Motoniveladoras
 						</button>
 						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="#">Maquinaria-1</a></li>
-							<li><a class="dropdown-item" href="#">Maquinaria-2</a></li>
-							<li><a class="dropdown-item" href="#">Maquinaria-3</a></li>
+							<li><a class="dropdown-item" href="#">MOT01</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="contenedor-flotes-img">
-					<img src={% static 'car01.png' %}>
+					<img src={% static 'can.png' %}>
 					<div class="hover-img dropdown">
 						<button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
 							aria-expanded="false">
-							Maquinaria
+							Camiones
 						</button>
 						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="#">Maquinaria-1</a></li>
-							<li><a class="dropdown-item" href="#">Maquinaria-2</a></li>
-							<li><a class="dropdown-item" href="#">Maquinaria-3</a></li>
+							<li><a class="dropdown-item" href="#">CON01</a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-
-	<!--<div class="flex-container">
-		<div class="form-img">
-			<div class="img-container">
-				<div>
-					<img src={% static 'retro1.png' %}>
-				</div>
-			</div>
-		</div>-->
 </body>
 
 {% endblock %}
