--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -56,7 +56,7 @@
 						</button>
 						<ul class="dropdown-menu">
 							{% for flote in value.flotes %}
-							<li><a class="dropdown-item" href="#">{{ flote.code }}</a></li>
+							<li><a class="dropdown-item" href="flote">{{ flote.code }}</a></li>
 							{% endfor %}
 						</ul>
 					</div>
