--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -16,7 +16,7 @@
 			</div>
 			<div class="nav-desktop right">
 				<button class="btn btn-outline-success me-2" type="button">
-					<a href="add">Agregar flota</a>
+					<a href="/flotes/add">Agregar flota</a>
 				</button>
 				<form class="d-flex" role="search">
 					<input class="form-control me-2" type="search" placeholder="Buscador" aria-label="Buscador">
@@ -56,7 +56,7 @@
 						</button>
 						<ul class="dropdown-menu">
 							{% for flote in value.flotes %}
-							<li><a class="dropdown-item" href="flote">{{ flote.code }}</a></li>
+							<li><a class="dropdown-item" href={{ flote.code }}>{{ flote.code }}</a></li>
 							{% endfor %}
 						</ul>
 					</div>
