show images un flote page

--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="conteiner-flote">
-    <p>{{flote.type}}</p>
+    <img src="{{ flote.img }}">
 </body>
 
 {% endblock content %}
