--- a/backServer/vistas/html/add_flote.html
+++ b/backServer/vistas/html/add_flote.html
@@ -16,7 +16,7 @@
             </div>
             <div class="nav-desktop right">
                 <button class="btn btn-outline-success me-2" type="button">
-                    <a href="../flotes">VOLVER</a>
+                    <a href="/home/flotes">VOLVER</a>
                 </button>
             </div>
         </div>
