--- a/backServer/vistas/html/add_flote.html
+++ b/backServer/vistas/html/add_flote.html
@@ -15,9 +15,7 @@
                 <img src={% static 'logo-nav.png' %}>
             </div>
             <div class="nav-desktop right">
-                <button class="btn btn-outline-success me-2" type="button">
-                    <a href="../flotes">VOLVER</a>
-                </button>
+                <a class="btn btn-outline-success me-2" href="../flotes" role="button">VOLVER</a>
             </div>
         </div>
     </nav>
