--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -15,14 +15,12 @@
 				<img src={% static 'logo-nav.png' %}>
 			</div>
 			<div class="nav-desktop right">
-				<button class="btn btn-outline-success me-2" type="button">
-					<a href="/flotes/add">Agregar flota</a>
-				</button>
+					<a class="btn btn-outline-success me-2" href="/flotes/add" role="button">Agregar flota</a>
 				<form class="d-flex" role="search">
 					<input class="form-control me-2" type="search" placeholder="Buscador" aria-label="Buscador">
 					<button class="btn btn-outline-success" type="submit">Buscar</button>
 				</form>
-				<a class="btn btn-outline-success" type="button" href="/logout">Cerrar Sesión</a>
+				<a class="btn btn-outline-success me-2" type="button" href="/logout" role="button">Cerrar Sesión</a>
 			</div>
 		</div>
 	</nav>
