--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -9,13 +9,27 @@
 </head>
 
 <body>
-	<nav class="nav-bar">
+	<nav class="navbar">
+		<div class="container-fluid">
+			<div class="navbar-brand logo">
+				<img src={% static 'logo-nav.png' %}>
+			</div>
+			<form class="d-flex" role="search">
+				<a class="btn btn-outline-success me-2" href="/flotes/add" role="button">Agregar flota</a>
+				<input class="form-control me-2" type="search" placeholder="Buscador" aria-label="Buscador">
+				<button class="btn btn-outline-success" type="submit">Buscar</button>
+				<a class="btn btn-outline-success me-2" type="button" href="/logout" role="button">Cerrar Sesión</a>
+			</form>
+		</div>
+	</nav>
+
+	<!--<nav class="nav-bar">
 		<div class="container-fluid">
 			<div class="nav-desktop logo">
 				<img src={% static 'logo-nav.png' %}>
 			</div>
 			<div class="nav-desktop right">
-					<a class="btn btn-outline-success me-2" href="/flotes/add" role="button">Agregar flota</a>
+				<a class="btn btn-outline-success me-2" href="/flotes/add" role="button">Agregar flota</a>
 				<form class="d-flex" role="search">
 					<input class="form-control me-2" type="search" placeholder="Buscador" aria-label="Buscador">
 					<button class="btn btn-outline-success" type="submit">Buscar</button>
@@ -23,7 +37,7 @@
 				<a class="btn btn-outline-success me-2" type="button" href="/logout" role="button">Cerrar Sesión</a>
 			</div>
 		</div>
-	</nav>
+	</nav>-->
 
 	<header class="header">
 		<div class="wave " style="height: 150px; overflow: hidden;">
