--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -23,23 +23,24 @@
 
     <div class="card mb-3" style="width: 600px;">
         <!--<img src="{{ flote.img }}" class="card-img-top" alt="...">-->
-        <img src={% static 'retro.png' %} class="card-img-top" alt="...">
+        <img src={% static 'cam.png' %} class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">{{flote.type}}</h5>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">{{flote.code}}</li>
-                <li class="list-group-item">{{flote.brand}}</li>
-                <li class="list-group-item">{{flote.characteristics}}</li>
-                <li class="list-group-item">{{flote.patent}}</li>
-                <li class="list-group-item">{{flote.production_year}}</li>
-                <li class="list-group-item">{{flote.engine_number}}</li>
-                <li class="list-group-item">{{flote.chassis_number}}</li>
-                <li class="list-group-item">{{flote.status}}</li>
-                <li class="list-group-item">{{flote.justifyStatus}}</li>
-                <li class="list-group-item">{{flote.operators}}</li>
-            </ul>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <h5 class="card-title">{{flote.type}}</h5>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">{{flote.code}}</li>
+            <li class="list-group-item">{{flote.brand}}</li>
+            <li class="list-group-item">{{flote.characteristics}}</li>
+            <li class="list-group-item">{{flote.patent}}</li>
+            <li class="list-group-item">{{flote.production_year}}</li>
+            <li class="list-group-item">{{flote.engine_number}}</li>
+            <li class="list-group-item">{{flote.chassis_number}}</li>
+            <li class="list-group-item">{{flote.status}}</li>
+            <li class="list-group-item">{{flote.justifyStatus}}</li>
+            <li class="list-group-item">{{flote.operators}}</li>
+          </ul>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
-    </div>
+      </div>
 
-    {% endblock content %}
+
+{% endblock content %}
