--- a/backServer/vistas/html/add_flote.html
+++ b/backServer/vistas/html/add_flote.html
@@ -9,14 +9,28 @@
 </head>
 
 <body>
-    <nav class="nav-bar">
+    <nav class="navbar sticky-top">
         <div class="container-fluid">
-            <div class="nav-desktop logo">
-                <img src={% static 'logo-nav.png' %}>
+            <div class="navbar-brand">
+                <img src={% static 'logo-nav.png' %} alt="Logo" width="120" height="50"
+                    class="d-inline-block align-text-top">
             </div>
-            <div class="nav-desktop right">
-                <a class="btn btn-outline-success me-2" href="/home/flotes" role="button">VOLVER</a>
-            </div>
+            <ul class="nav justify-content-end">
+                <li class="nav-item search">
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Buscador" aria-label="Buscador">
+                        <button class="btn btn-outline-success" type="submit">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </button>
+                    </form>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-outline-success me-2" href="/home/flotes" role="button">Volver</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-outline-success me-2" type="button" href="/logout" role="button">Cerrar Sesión</a>
+                </li>
+            </ul>
         </div>
     </nav>
     <div class="input-group mb-3 flex-container">
