--- a/backServer/vistas/html/ti_ingreso.html
+++ b/backServer/vistas/html/ti_ingreso.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href={% static 'css/ti_ingreso.css' %}?{% now "U" %}>
 </head>
 
-<body>
+<body class="container">
 	<div class="flex-container">
 		<div class="form-img">
 			<div class="img-container">
